--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     font-weight: 400;
 
     body {
+        margin: 0;
         font-family: sans-serif;
         line-height: 1.5;
     }
@@ -21,7 +22,6 @@
     ul,
     ol {
         list-style-type: none;
-        margin: 0;
         padding: 0;
     }
 
@@ -33,8 +33,9 @@
 }
 
 main {
-    max-width: 1280px;
+    max-width: 1440px;
     margin: 0 auto;
+    padding: 0 20px 0 20px;
 }
 
 input {
